reconfigure the hashing algorithms

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -24,19 +24,37 @@
 {% endif %}
 
 <!-- Hashing Form -->
-<form method="post" action="{% url 'hash' %}">
+<form method="post" enctype="multipart/form-data" action ="{% url 'hash' %}">
     {% csrf_token %}
-    <input type="text" name="input_string" placeholder="Enter string to hash">
-    <button type="submit">Hash</button>
+    <textarea name="input_string" placeholder="Enter string to hash"></textarea>
+    <input type="file" name="file">
+    <button type="submit">Hash and Verify</button>
 </form>
 
 {% if hash_results %}
-    <h2>Hash Results:</h2>
+    <h2>Hash Results for String:</h2>
     <ul>
-        {% for algo, hash in hash_results.items %}
-            <li>{{ algo }}: {{ hash }}</li>
+        {% for hash_type, hash_value in hash_results.items %}
+            <li>{{ hash_type }}: {{ hash_value }}</li>
         {% endfor %}
     </ul>
+    <p>Input String: {{ input_string }}</p>
+    {% if hash_match %}
+        <p>{{ hash_match }}</p>
+    {% endif %}
+{% elif hash_results_file %}
+    <h2>Hash Results for File:</h2>
+    <ul>
+        {% for hash_type, hash_value in hash_results_file.items %}
+            <li>{{ hash_type }}: {{ hash_value }}</li>
+        {% endfor %}
+    </ul>
+    <p>File Name: {{ file_name }}</p>
+    {% if hash_match_file %}
+        <p>{{ hash_match_file }}</p>
+    {% endif %}
+{% elif error %}
+    <p>Error: {{ error }}</p>
 {% endif %}
 
 
